--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 = Revision history for mediawiki-testwiki
 
+== 0.0.1 [2014-09-26]
+
+* First release.
+
 == 0.0.0 [2014-07-29]
 
 * Birthday :-)
