--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,13 @@
 
 = Revision history for mediawiki-testwiki
 
+== 0.0.2 [2014-09-29]
+
+* Fixed <tt>setup:config</tt> task.
+* fixed <tt>nginx.conf</tt> file.
+* Fixed gem dependencies.
+* Updated README.
+
 == 0.0.1 [2014-09-26]
 
 * First release.
